fix: minor frontend qol

--- a/backend/src/views/layout.hbs
+++ b/backend/src/views/layout.hbs
@@ -5,18 +5,18 @@
   <title>STADVDB MCO2 - Node {{nodeId}} ({{nodeRole}})</title>
   <link rel="stylesheet" href="/public/css/styles.css">
 </head>
-<body>
-  <header>
+<body> 
+  {{!-- <header> 
     <h1>STADVDB MCO2 - Distributed DB Demo</h1>
     <p>
       You are connected to
       <strong>Node {{nodeId}} ({{nodeRole}})</strong>
     </p>
     <nav>
-      <a href="/">Home</a>
-      <a href="/transactions/local">Local Fragment</a>
+      <a href="/">Home |</a>
+      <a href="/transactions/local">Local Fragment |</a>
     </nav>
-  </header>
+  </header> --}}
 
   <main>
     {{{body}}}
