--- a/node3/src/views/index.hbs
+++ b/node3/src/views/index.hbs
@@ -31,8 +31,14 @@
         View local fragment (this node's <code>trans</code> table)
       </a>
     </li>
+    <li>
+      <a href="/transactions/crud">
+        Simple CRUD operations (via Tx API)
+      </a>
+    </li>
     <li><a href="/concurrency">Run manual concurrency experiments</a></li>
     <li><a href="/replication">Replication dashboard</a></li>
+    <li><a href="/reports">Reports / summaries</a></li>
     <li><a href="/admin/panel">Node status / failure simulation</a></li>
   </ul>
 </section>
