--- a/node3/src/views/partials/header.hbs
+++ b/node3/src/views/partials/header.hbs
@@ -9,8 +9,10 @@
     <div class="nav-links">
       <a href="/">Home |</a>
       <a href="/transactions/local">Local Fragment |</a>
+      <a href="/transactions/crud">CRUD Playground |</a>
       <a href="/concurrency">Concurrency Demo |</a>
       <a href="/replication">Replication Dashboard |</a>
+      <a href="/reports">Reports |</a>
       <a href="/admin/panel">Admin / Failure Panel |</a>
     </div>
 
