--- a/node3/src/views/partials/header.hbs
+++ b/node3/src/views/partials/header.hbs
@@ -13,6 +13,7 @@
       <a href="/concurrency">Concurrency Demo |</a>
       <a href="/replication">Replication Dashboard |</a>
       <a href="/reports">Reports |</a>
+      <a href="/replication/logs">Replication Logs |</a></li>
       <a href="/admin/panel">Admin / Failure Panel |</a>
     </div>
 
