--- a/node2/src/views/concurrency.hbs
+++ b/node2/src/views/concurrency.hbs
@@ -163,7 +163,7 @@
       Start transaction A\&/B
     </li>
     <li>
-      Row-Level Opoerations: Set both transactions to same row (ex: both <code>trans_id = 1</code>).
+      Row-Level Operations: Set both transactions to same row (ex: both <code>trans_id = 1</code>).
     </li>
     <li>
       Use READ/UPDATE/COMMIT in different orders
